# Probabilistic-Programming-and-Bayesian-Methods-for-Hackers

./: my_notes_and_things_that_i_am_learning.md  pyproject.toml
Chapter1_Introduction/: Ch1_Introduction_PyMC_current.ipynb
Chapter2_MorePyMC/: Ch2_MorePyMC_PyMC3.ipynb
Chapter3_MCMC/: Ch3_IntroMCMC_PyMC3.ipynb  Ch3_IntroMCMC_PyMC_current.ipynb
