[tool.poetry]
name = "probabilistic-programming-and-bayesian-methods-for-hackers"
version = "0.1.0"
description = ""
authors = ["Tristan New <tristan.new@route2.com>"]
readme = "README.md"
packages = [{include = "probabilistic_programming_and_bayesian_methods_for_hackers"}]

[tool.poetry.dependencies]
python = "^3.10"
ipython = ">=2.0"
matplotlib = ">=1.2.1"
numpy = ">=1.7.1"
pymc = ">=5.0.1"
pyzmq = ">=13.1.0"
scipy = ">=0.12.0"
tornado = ">=3.0.2"
wsgiref = ">=0.1.2"
praw = ">=2.0.0"
Jinja2 = "^3.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
