[tool.poetry]
name = "probabilistic-programming-and-bayesian-methods-for-hackers"
version = "0.1.0"
description = ""
authors = ["Tristan New <tristan.new@route2.com>"]
readme = "README.md"
packages = [{include = "probabilistic_programming_and_bayesian_methods_for_hackers"}]

[tool.poetry.dependencies]
python = ">=3.10, <3.11"
ipython = "*"
matplotlib = "*"
numpy = "*"
pymc = "*"
pyzmq = "*"
scipy = "*"
tornado = "*"
wsgiref = "*"
praw = "*"
Jinja2 = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
